Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5.7, 10.6.0, 10.7.0, 10.5(EOL), 10.6(EOL), 10.7(EOL)
Description
When buf_pool.flush_rbt was removed in MDEV-23399, an extra flush of the buffer pool was added to the end of the last crash recovery batch (recv_sys.apply(true)). We should avoid this extra startup delay and simply sort buf_pool.flush_list at that point.
Attachments
Issue Links
- blocks
-
MDEV-14481 Execute InnoDB crash recovery in the background
-
- Closed
-
- is blocked by
-
MDEV-27111 atomic.rename_table test case fails on bb-10.6-MDEV-27022 branch
-
- Closed
-
- is caused by
-
MDEV-23399 10.5 performance regression with IO-bound tpcc
-
- Closed
-
- is part of
-
MDEV-14481 Execute InnoDB crash recovery in the background
-
- Closed
-
- relates to
-
MDEV-27817 InnoDB recovery of recently created files is not crash-safe
-
- Closed
-
-
MDEV-31354 SIGSEGV in log_sort_flush_list() in InnoDB crash recovery
-
- Closed
-