MDEV-27022 Buffer pool is being flushed during recovery

The problem was introduced by the removal of buf_pool.flush_rbt
in commit 46b1f500983d45e89dc84bb9820023bd51a4cda8 (MDEV-23399)

recv_sys_t::apply(): don't write to disc and fsync() the last batch.
Insead, sort it by oldest_modification for MariaDB server and some
mariabackup operations.

log_sort_flush_list(): a thread-safe function which sorts buf_pool::flush_list